--- a/src/app/page-boutique/page-boutique.component.html
+++ b/src/app/page-boutique/page-boutique.component.html
@@ -1,3 +1,4 @@
+<app-header></app-header>
 <body class="agent_profile menu-default hover-default " xmlns="http://www.w3.org/1999/html">
 <!--
 SVG icons from sprite-inline.svg
