--- a/src/app/acceuil/acceuil.component.html
+++ b/src/app/acceuil/acceuil.component.html
@@ -1,3 +1,4 @@
+<app-header></app-header>
 <body class="agent_profile menu-default hover-default ">
 <div class="site-wrap js-site-wrap">
   <!-- BEGIN BREADCRUMBS-->
@@ -23,5 +24,6 @@
     <source src="http://codefactory47.com/public/realtyspace/media/videotour.webm" type="video/webm">
   </video>
   <!--button.article__preview-play.js-player-play-->
-</div></div>
+</div>
+</div>
 </body>
