--- a/src/app/commande/commande.component.html
+++ b/src/app/commande/commande.component.html
@@ -1,4 +1,4 @@
-
+<app-header></app-header>
 <div class="site__main">
   <div class="widget js-widget widget--main">
     <div class="widget__content">
