--- a/src/app/payement/payement.component.html
+++ b/src/app/payement/payement.component.html
@@ -1,3 +1,4 @@
+<app-header></app-header>
 <body class="agent_profile menu-default hover-default ">
   <div class="site-wrap js-site-wrap">
     <!-- BEGIN BREADCRUMBS-->
