--- a/src/app/utilisateur/utilisateur.component.html
+++ b/src/app/utilisateur/utilisateur.component.html
@@ -1,3 +1,111 @@
+<div class="box js-box">
+  <header class="header header--brand">
+    <div class="container">
+      <div class="header__row"><a href="index.html" class="header__logo">
+        <svg>
+          <use xlink:href="#icon-logo--mob"></use>
+        </svg></a>
+        <div class="header__settings">
+
+          <!-- end of block .header__settings-column-->
+
+          <!-- end of block .header__settings-column-->
+          <div class="header__settings-column">
+            <div class="dropdown dropdown--header">
+              <button data-toggle="dropdown" type="button" class="dropdown-toggle dropdown__btn">
+                <svg class="header__settings-icon">
+                  <use xlink:href="#icon-earth"></use>
+                </svg>FR
+              </button>
+              <div class="dropdown__menu">
+                <ul>
+                  <li class="dropdown__item"><a href="#" class="dropdown__link">عربية</a></li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="header__contacts"><a href="tel:+12025550135" class="header__phone">
+          <svg class="header__phone-icon">
+            <use xlink:href="#icon-phone"></use>
+          </svg><span class="header__span">+1 202 555 0135</span></a></div>
+        <!-- end of block .header__contacts-->
+        <div class="header__social">
+          <div class="social social--header social--circles"><a href="#" class="social__item"><i class="fa fa-facebook"></i></a><a href="#" class="social__item"><i class="fa fa-twitter"></i></a><a href="#" class="social__item"><i class="fa fa-google-plus"></i></a></div>
+        </div>
+        <div class="auth auth--header">
+          <ul class="auth__nav">
+            <li class="dropdown auth__nav-item">
+              <div class="dropdown__menu auth__dropdown--restore">
+                <!-- BEGIN AUTH RESTORE-->
+                <h5 class="auth__title">Reset password</h5>
+                <form action="#" class="form form--flex form--auth form--restore js-restore-form js-parsley">
+                  <div class="row">
+                    <div class="form-group">
+                      <label for="restore-email-dropdown" class="control-label">Enter your User Name or Email</label>
+                      <input type="email" name="email" id="restore-email-dropdown" required class="form-control">
+                    </div>
+                  </div>
+                  <div class="row">
+                    <button type="submit" class="form__submit">Reset password</button>
+                  </div>
+                  <div class="row">
+                    <div class="form__options">Back to
+                      <button type="button" class="js-user-login">Log In</button>or
+                      <button type="button" class="js-user-register">Registration</button>
+                    </div>
+                    <!-- end of block .auth__links-->
+                  </div>
+                </form>
+                <!-- end of block .auth__form-->
+                <!-- END AUTH RESTORE-->
+              </div>
+            </li>
+            <li class="dropdown auth__nav-item" >
+
+              <button (click)="login1()" data-toggle="dropdown" type="button" class="dropdown-toggle auth__nav-btn">
+                <svg class="auth__icon-user">
+                  <use xlink:href="#icon-user"></use>
+                </svg>
+                <span class="header__span">  Login</span>
+              </button>
+
+            </li>
+          </ul>
+          <!-- end of block .auth header-->
+        </div>
+        <button type="button" class="header__navbar-toggle js-navbar-toggle"
+                data-toggle="collapse"
+                data-target="#navbar-collapse-1"
+                aria-controls="navbar-collapse-1"
+                aria-expanded="false"
+                aria-label="Toggle navigation"
+                >
+          <svg class="header__navbar-show" >
+            <use xlink:href="#icon-menu"></use>
+          </svg>
+          <svg class="header__navbar-hide">
+            <use xlink:href="#icon-menu-close"></use>
+          </svg>
+        </button>
+        <!-- end of block .header__navbar-toggle-->
+      </div>
+    </div>
+  </header>
+  <!-- END HEADER-->
+  <!-- BEGIN NAVBAR-->
+  <div id="header1-nav-offset"></div>
+  <nav id="header-nav" class="navbar navbar--header">
+    <div class="container">
+      <div class="navbar__row js-navbar-row"><a href="index.html" class="navbar__brand">
+        <svg class="navbar__brand-logo">
+          <use xlink:href="#icon-logo"></use>
+        </svg></a>
+      </div>
+    </div>
+  </nav>
+</div>
+
 <!-- END HEADER-->
 <!-- BEGIN NAVBAR-->
 
