--- a/src/app/acceuil/acceuil.component.html
+++ b/src/app/acceuil/acceuil.component.html
@@ -12,6 +12,9 @@
 
 
 </div>
+<div class="container">
+<div class="cont">
+  <img src="/assets/img/acceuil/185123389_297967001822268_7233354558132029891_n.jpg" height="350" width="1000"></div></div>
 <div *ngIf="user" class="cont">
   <span class="text1">Bienvenue</span>
   <span class="text2">{{user.nom}} {{user.prenom}}</span></div>
@@ -25,5 +28,6 @@
   </video>
   <!--button.article__preview-play.js-player-play-->
 </div>
+<br><br>
 </div>
 </body>
