--- a/src/app/ajouter-produit/ajouter-produit.component.html
+++ b/src/app/ajouter-produit/ajouter-produit.component.html
@@ -137,11 +137,12 @@
                   <nav class="worker__nav">
                     <ul>
                       <li><a  (click)="gotoajout()">Profil</a></li>
-                      <li><a (click)="gotoajoutProduit()" >Ajouter produit</a></li>
+                      <li><a *ngIf="statis" (click)="gotoajoutProduit()" >Ajouter produit</a></li>
                       <li><a (click)="gotoproduit()" >produits (à vendre)</a></li>
                       <li><a (click)="gotodon()" >produits (à donner)</a></li>
-                      <li><a (click)="gotoabonnement()" >Faire un abonnement</a></li>
-                      <li><a  >Vos abonnement</a></li>
+                      <li><a *ngIf="statis" (click)="gotoabonnement()" >Faire un abonnement</a></li>
+                      <li><a *ngIf="statis" >Vos abonnement</a></li>
+                      <li><a *ngIf="statis"  (click)="gotostatistique()">Statistique</a></li>
                     </ul>
                   </nav>
                   <!-- end of block .worker__nav-->
