--- a/src/app/boutique/abonnement/abonnement.component.html
+++ b/src/app/boutique/abonnement/abonnement.component.html
@@ -98,9 +98,11 @@
                   <ul>
                     <li><a  (click)="gotoajout()">Profil</a></li>
                     <li><a (click)="gotoajoutProduit()" >Ajouter produit</a></li>
-                    <li><a (click)="gotoproduit()" >Vos produits</a></li>
+                    <li><a (click)="gotoproduit()" >produits (à vendre)</a></li>
+                    <li><a (click)="gotodon()" >produits (à donner)</a></li>
                     <li><a (click)="gotoabonnement()" >Faire un abonnement</a></li>
                     <li><a  >Vos abonnement</a></li>
+                    <li><a  (click)="gotostatistique()">Statistique</a></li>
                   </ul>
                 </nav>
                 <!-- end of block .worker__nav-->
