--- a/src/app/details-produit/details-produit.component.html
+++ b/src/app/details-produit/details-produit.component.html
@@ -216,39 +216,42 @@ becomes
         <!-- BEGIN SIDEBAR-->
         <div class="sidebar">
           <div class="widget js-widget widget--sidebar widget--first-no-head">
-            <div class="widget__header"><a class="widget__btn js-widget-btn widget__btn--toggle">Show agent</a>
+            <div class="widget__header"><a class="widget__btn js-widget-btn widget__btn--toggle">Show profile</a>
             </div>
             <div class="widget__content">
-              <div data-sr="enter bottom move 80px, scale(0), over 0s" data-animate-end="animate-end" class="worker js-unhide-block vcard worker--sidebar-advanced">
-                <h3 class="worker__name fn">{{boutique.boutique.nom}}</h3>
-                <div class="worker__post">{{boutique.boutique.adresse}}</div>
-                <div class="worker__photo"><a href="agent_profile.html" class="item-photo item-photo--static"><img src="/assets/img/pharmacie.png" alt="Christopher Pakulla" class="photo"/>
-                  <figure class="item-photo__hover"><span class="item-photo__more">View Details</span></figure></a></div>
-                <div class="worker__intro">
-                  <button type="button" class="worker__show js-unhide">Contact agent</button>
+              <!-- BEGIN WORKER PROFILE-->
+              <div class="worker sidebar-advanced">
+                <h3 class="worker__name">{{boutique1.nom}}</h3>
+                <div class="worker__photo">
+                  <img src="http://localhost:3000/boutique/profileimage/{{boutique1.photo}}" class="photo" width="200" height="200">
+                  <div class="widget js-widget widget--main widget--no-margin widget--no-border widget--collapse">
+                    <div class="widget__header">
+                      <br>
+                    </div>
 
-                  <!-- end of block .worker__listings-->
-                  <div class="worker__intro-row">
-                    <div class="worker__intro-col">
-                      <div class="worker__contacts">
-                        <div class="tel"><span class="type">Tel.</span><a href="tel:+44(0)2035102390" class="uri value">+44 (0) 20 3510 2390</a></div>
-                        <div class="tel"><span class="type">Mob.</span><a href="tel:+44(0)30345207210" class="uri value">+44 (0) 303 4520 7210</a></div>
-                        <div class="email"><span class="type">Email</span><a href="mailto:rs@realtyspace.com" class="uri value">rs@realtyspace.com</a></div>
-                        <div class="skype"><span class="type">Skype</span><a href="skype:Walkenboy?call" class="uri value">Walkenboy</a></div>
-                      </div>
-                      <!-- end of block .worker__contacts-->
-                    </div>
-                    <div class="worker__intro-col">
-                      <div class="social social--worker"><a href="#" class="social__item"><i class="fa fa-facebook"></i></a><a href="#" class="social__item"><i class="fa fa-linkedin"></i></a><a href="#" class="social__item"><i class="fa fa-twitter"></i></a><a href="#" class="social__item"><i class="fa fa-google-plus"></i></a></div>
-                    </div>
+
                   </div>
+
                 </div>
-                <div class="clearfix"></div>
+                <nav class="worker__nav">
+                  <ul>
+                    <li><a  (click)="gotoajout()">Profil</a></li>
+                    <li><a *ngIf="status" (click)="gotoajoutProduit()" >Ajouter produit</a></li>
+                    <li><a (click)="gotoproduit()" >produits (à vendre)</a></li>
+                    <li><a (click)="gotodon()" >produits (à donner)</a></li>
+                    <li><a *ngIf="status" (click)="gotoabonnement()" >Faire un abonnement</a></li>
+                    <li><a *ngIf="status"  >Vos abonnement</a></li>
+                    <li><a *ngIf="status"  (click)="gotostatistique()">Statistique</a></li>
+                  </ul>
+                </nav>
+                <!-- end of block .worker__nav-->
               </div>
-              <!-- end of block .worker-->
-            </div></div>
+              <!-- end of block .worker__item-->
+              <!-- END WORKER PROFILE-->
+            </div>
+          </div>
+
         </div>
-        <!-- END SIDEBAR-->
         <div class="clearfix"></div>
       </div>
     </div>
