--- a/src/app/acceuil/acceuil.component.html
+++ b/src/app/acceuil/acceuil.component.html
@@ -22,10 +22,7 @@
 
   <br><br><br><br>
 <div class="player">
-  <video poster="http://codefactory47.com/public/realtyspace/media/playercover.jpg" controls crossorigin>
-    <source src="http://codefactory47.com/public/realtyspace/media/videotour.mp4" type="video/mp4">
-    <source src="http://codefactory47.com/public/realtyspace/media/videotour.webm" type="video/webm">
-  </video>
+  <iframe width="1200" height="600" src="https://www.youtube.com/embed/UOm0Ra3bwis" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   <!--button.article__preview-play.js-player-play-->
 </div>
 <br><br>
