:construction: traduction du francais vers l'arabe

--- a/src/app/acceuil/acceuil.component.html
+++ b/src/app/acceuil/acceuil.component.html
@@ -16,7 +16,7 @@
 <div class="cont">
   <img src="/assets/img/acceuil/185123389_297967001822268_7233354558132029891_n.jpg" height="350" width="1000"></div></div>
 <div *ngIf="user" class="cont">
-  <span class="text1">Bienvenue</span>
+  <span class="text1">{{ 'acceuil.bienvenue' | translate }}</span>
   <span class="text2">{{user.nom}} {{user.prenom}}</span></div>
 <div class="container">
 
