--- a/src/app/boutique/boutique-don/boutique-don.component.html
+++ b/src/app/boutique/boutique-don/boutique-don.component.html
@@ -46,15 +46,10 @@
                     <div class="properties__info"><span class="properties__address-street">{{boutiques.nom}}</span><span class="properties__address-city"><p-rating readonly=true [(ngModel)]="val"></p-rating></span>
                       <div class="properties__offer">
                         <div class="properties__offer-column">
-                          <div class="properties__offer-label">Prix sans remise</div>
-                          <div class="properties__offer-value"><strong> {{boutiques.prixsansremise}}</strong>
+                          <div class="properties__offer-label"></div>
+                          <div class="properties__offer-value"><strong> Gratuit</strong>
                           </div>
 
-                        </div>
-                        <div class="properties__offer-column">
-                          <div class="properties__offer-label">Prix avec remise</div>
-                          <div class="properties__offer-value"><strong>{{boutiques.prixavecremise}}</strong>
-                          </div>
                         </div>
                       </div>
                       <div class="properties__params--mob"><a href="#" class="properties__more">View details</a><span class="properties__params">Built-Up - 85 Sq Ft</span><span class="properties__params">Land Size - 153 Sq Ft</span></div>
