--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -12,14 +12,14 @@
         <!-- end of block .header__settings-column-->
         <div class="header__settings-column">
           <div class="dropdown dropdown--header">
-            <button data-toggle="dropdown" type="button" class="dropdown-toggle dropdown__btn">
+            <button (click)="changeLang1()" data-toggle="dropdown" type="button" class="dropdown-toggle dropdown__btn">
               <svg class="header__settings-icon">
                 <use xlink:href="#icon-earth"></use>
               </svg>FR
             </button>
             <div class="dropdown__menu">
               <ul>
-                <li class="dropdown__item"><a href="#" class="dropdown__link">عربية</a></li>
+                <li class="dropdown__item"><a (click)="changeLang2()" class="dropdown__link">عربية</a></li>
               </ul>
             </div>
           </div>
@@ -113,7 +113,7 @@
       </svg></a>
       <div id="navbar-collapse-1" [ngClass]="{'show':visibility}" class="navbar__wrap navbar__wrap--init">
         <ul class="navbar__nav">
-          <li class="navbar__item js-dropdown"><a class="navbar__link" [routerLink]="['']" routerLinkActive="active" >Acceuil
+          <li class="navbar__item js-dropdown"><a class="navbar__link" [routerLink]="['acceuil']" routerLinkActive="active" >{{ 'header.acceuil' | translate }}
             <svg class="navbar__arrow">
               <use xlink:href="#icon-arrow-right"></use>
             </svg></a>
@@ -127,20 +127,20 @@
               </div>
             </div>
           </li>
-          <li class="navbar__item js-dropdown"><a class="navbar__link">Utilisateur
+          <li class="navbar__item js-dropdown"><a class="navbar__link">{{ 'header.utilisateur' | translate }}
           </a>
             <div role="menu" class="js-dropdown-menu navbar__dropdown navbar__dropdown--colls-1">
 
 
               <div class="navbar__submenu">
                 <ul class="navbar__subnav">
-                  <li class="navbar__subitem"><a [routerLink]="['login']" class="navbar__sublink js-navbar-sublink">Login / Créer compte</a></li>
-                  <li class="navbar__subitem"><a (click)="gotoprofilutilisateur()" class="navbar__sublink js-navbar-sublink">Votre compte</a></li>
+                  <li class="navbar__subitem"><a [routerLink]="['']" class="navbar__sublink js-navbar-sublink">{{ 'header.login' | translate }}</a></li>
+                  <li class="navbar__subitem"><a (click)="gotoprofilutilisateur()" class="navbar__sublink js-navbar-sublink">{{ 'header.compte' | translate }}</a></li>
                 </ul>
               </div>
             </div>
           </li>
-          <li class="navbar__item js-dropdown active" ><a class="navbar__link" (click)="gotopageboutique()" routerLinkActive="active">Boutiques
+          <li class="navbar__item js-dropdown active" ><a class="navbar__link" (click)="gotopageboutique()" routerLinkActive="active">{{ 'header.boutique' | translate }}
             <svg class="navbar__arrow">
               <use xlink:href="#icon-arrow-right"></use>
             </svg></a>
@@ -152,16 +152,16 @@
               </button>
               <div class="navbar__submenu">
                 <ul class="navbar__subnav">
-                  <li class="navbar__subitem active"><a (click)="gotopageboutique()"  class="navbar__sublink js-navbar-sub-sublink">Page Boutique</a></li>
+                  <li class="navbar__subitem active"><a (click)="gotopageboutique()"  class="navbar__sublink js-navbar-sub-sublink">{{ 'header.pageboutique' | translate }}</a></li>
 
-                  <li class="navbar__subitem"><a (click)="gotoboutique()" class="navbar__sublink js-navbar-sub-sublink">Liste des Boutiques</a></li>
-                  <li class="navbar__subitem active" *ngIf="!status" ><a (click)="gotoajboutique()"  class="navbar__sublink js-navbar-sub-sublink">Ajouter Boutique</a></li>
+                  <li class="navbar__subitem"><a (click)="gotoboutique()" class="navbar__sublink js-navbar-sub-sublink">{{ 'header.listeboutiques' | translate }}</a></li>
+                  <li class="navbar__subitem active" *ngIf="!status" ><a (click)="gotoajboutique()"  class="navbar__sublink js-navbar-sub-sublink">{{ 'header.ajouterboutique' | translate }}</a></li>
 
                 </ul>
               </div>
             </div>
           </li>
-          <li class="navbar__item js-dropdown" *ngIf="status" ><a class="navbar__link"  (click)="gotocommande()" routerLinkActive="active">Commande
+          <li class="navbar__item js-dropdown" *ngIf="status" ><a class="navbar__link"  (click)="gotocommande()" routerLinkActive="active">{{ 'header.commande' | translate }}
 
 
             <svg class="navbar__arrow">
@@ -178,7 +178,7 @@
               </div>
             </div>
           </li>
-          <li class="navbar__item js-dropdown"><a class="navbar__link" (click)="gotocontact()" routerLinkActive="active">Contact
+          <li class="navbar__item js-dropdown"><a class="navbar__link" (click)="gotocontact()" routerLinkActive="active">{{ 'header.contact' | translate }}
           </a>
             <div role="menu" class="js-dropdown-menu navbar__dropdown navbar__dropdown--colls-1">
               <button class="navbar__back js-navbar-submenu-back">
