--- a/src/app/boutique/profil/profil.component.html
+++ b/src/app/boutique/profil/profil.component.html
@@ -33,22 +33,22 @@
 
                       <div class="row">
                         <div class="form-group">
-                          <label for="in-1" class="control-label">Nom de boutique</label>
+                          <label for="in-1" class="control-label">{{ 'ajoutboutique.nom' | translate }}</label>
                           <input ngModel id="in-1" required name="nom" data-placeholder="---"  class="form-control">
                         </div>
                         <div class="form-group">
-                          <label for="in-4" class="control-label">Domaine</label>
+                          <label for="in-4" class="control-label">{{ 'ajoutboutique.domaine' | translate }}</label>
                           <select ngModel id="in-4" name="domaine" data-placeholder="Choose a Country..." required class="form-control">
                             <option label=" "></option>
-                            <option value="pharmacie">Pharmacie</option>
-                            <option value="boutique">Boutique</option>
-                            <option value="magasin">Magasin</option>
+                            <option value="pharmacie">{{ 'ajoutboutique.pharmacie' | translate }}</option>
+                            <option value="boutique">{{ 'ajoutboutique.boutique' | translate }}</option>
+                            <option value="magasin">{{ 'ajoutboutique.magasin' | translate }}</option>
                           </select>
                           <!-- end of block .form-property__control-->
                         </div>
 
                         <div class="form-group">
-                          <label for="in-6" class="control-label">Mail Professionnelle</label>
+                          <label for="in-6" class="control-label">{{ 'ajoutboutique.mail' | translate }}</label>
                           <input ngModel name="mailprofessionnelle" id="in-6" type="text" placeholder="" required class="form-control">
                         </div>
                       </div>
@@ -57,7 +57,7 @@
                     <div id="form-block-2" class="form__block js-form-block">
                       <div class="row">
                         <div class="form-group">
-                          <label for="in-7" class="control-label">Adresse</label>
+                          <label for="in-7" class="control-label">{{ 'ajoutboutique.adresse' | translate }}</label>
                           <input ngModel name="adresse" id="in-7" type="text" placeholder="" required  class="form-control">
                         </div>
 
@@ -71,60 +71,58 @@
                     <div id="form-block-3" class="form__block js-form-block">
                       <div class="row">
                         <div class="form-group form-group--description">
-                          <label for="in-13" class="control-label">Horaire</label>
-                          <textarea ngModel  name="horaire" id="in-13" required data-parsley-trigger="keyup" placeholder="Ouvert tous les jours de 7h30 à 17h sauf le Dimanche et le Samedi
-" data-parsley-minlength="200" data-parsley-validation-threshold="10" data-parsley-minlength-message="You need to enter at least a 200 caracters long comment.." class="form-control form-control--description"></textarea>
+                          <label for="in-13" class="control-label">{{ 'ajoutboutique.horaire' | translate }}</label>
+                          <textarea ngModel  name="horaire" id="in-13" required data-parsley-trigger="keyup" placeholder="{{ 'ajoutboutique.hdescription' | translate }}" data-parsley-minlength="200" data-parsley-validation-threshold="10" data-parsley-minlength-message="You need to enter at least a 200 caracters long comment.." class="form-control form-control--description"></textarea>
                         </div>
                       </div>
                     </div>
                     <header class="form__header">
-                      <h3 data-rel="#form-block-4" class="form__title js-form-title">Réseau Sociaux</h3>
+                      <h3 data-rel="#form-block-4" class="form__title js-form-title">{{ 'ajoutboutique.reseausociaux' | translate }}</h3>
                     </header>
                     <div id="form-block-45" class="form__block js-form-block">
                       <div class="row">
                         <div class="form-group form-group--social">
-                          <label for="facebook-field" class="control-label">Facebok</label>
+                          <label for="facebook-field" class="control-label">{{ 'ajoutboutique.facebook' | translate }}</label>
                           <input ngModel name="facebook" id="facebook-field" type="text" placeholder="http://facebook.com/youraccount" required class="form-control">
                         </div>
                         <div class="form-group form-group--social">
-                          <label for="twitter-field" class="control-label">Instagram</label>
+                          <label for="twitter-field" class="control-label">{{ 'ajoutboutique.instagram' | translate }}</label>
                           <input ngModel name="instagram" id="twitter-field" type="text" placeholder="http://instagram.com/youraccount" required  class="form-control">
                         </div>
 
                       </div>
                     </div>
                     <header class="form__header">
-                      <h3 data-rel="#form-block-4" class="form__title js-form-title">Google Maps</h3>
+                      <h3 data-rel="#form-block-4" class="form__title js-form-title">{{ 'ajoutboutique.googlemaps' | translate }}</h3>
                     </header>
                     <div id="form-block-454" class="form__block js-form-block">
                       <div class="row">
                         <div class="form-group form-group--social">
-                          <label for="facebook-field7" class="control-label">Latitude</label>
+                          <label for="facebook-field7" class="control-label">{{ 'ajoutboutique.latitude' | translate }}</label>
                           <input ngModel name="mapLat" id="facebook-field7" type="text" placeholder="36.89938215729048" required  class="form-control">
                         </div>
                         <div class="form-group form-group--social">
-                          <label for="twitter-field7" class="control-label">Longitude</label>
+                          <label for="twitter-field7" class="control-label">{{ 'ajoutboutique.longitude' | translate }}</label>
                           <input ngModel name="mapLng" id="twitter-field7" type="text" placeholder="10.189356669083528" required class="form-control">
                         </div>
 
                       </div>
                     </div>
                     <header class="form__header">
-                      <h3 data-rel="#form-block-4" class="form__title js-form-title">Visite Virtuelle</h3>
+                      <h3 data-rel="#form-block-4" class="form__title js-form-title">{{ 'ajoutboutique.visitevirtuelle' | translate }}</h3>
                     </header>
-                    <div class="site__panel"><span class="site__header-text">Vous pouvez utiliser  <a href="https://panoraven.com/fr/share-360-photo">ce lien</a> pour créer la visite virtuelle de votre
-                      boutique sous forme 360° gratuitement et copier le lien  ci-dessous .</span></div>
+                    <div class="site__panel"><span class="site__header-text">{{ 'ajoutboutique.description1' | translate }}  <a href="https://panoraven.com/fr/share-360-photo">{{ 'ajoutboutique.description2' | translate }}</a> {{ 'ajoutboutique.description3' | translate }}</span></div>
                     <div id="form-block-4547" class="form__block js-form-block">
                       <div class="row">
                         <div class="form-group form-group--social">
-                          <label for="facebook-field7" class="control-label">Lien direct</label>
+                          <label for="facebook-field7" class="control-label">{{ 'ajoutboutique.lien' | translate }}</label>
                           <input ngModel name="visite" id="facebook-field77" type="text" placeholder="https://panoraven.com/fr/slider/SjrUeJ5sB4" required  class="form-control">
                         </div>
 
                       </div>
                     </div>
                     <div class="row">
-                      <button class="form__submit" (click)="addBoutique(Ajouterboutique)">Ajouter</button>
+                      <button class="form__submit" (click)="addBoutique(Ajouterboutique)">{{ 'ajoutboutique.ajouter' | translate }}</button>
                     </div>
                   </form>
                   <hr>
