--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -5,13 +5,12 @@
 
         <div class="widget js-widget widget--footer">
           <div class="widget__header">
-            <h2 class="widget__title" >About</h2>
+            <h2 class="widget__title" >{{ 'footer.about' | translate }}</h2>
           </div>
           <div class="widget__content">
             <aside class="widget_text">
               <div class="textwidget">
-                Our SAHEELHA project is used to reduce aged waste: Medicines, cosmetics, Food products by buying them with cheaper prices than at the markets
-
+                {{ 'footer.description' | translate }}
 
 
               </div>
@@ -26,7 +25,7 @@
 
         <div class="widget js-widget widget--footer">
           <div class="widget__header">
-            <h2 class="widget__title">Social</h2>
+            <h2 class="widget__title">{{ 'footer.social' | translate }}</h2>
           </div>
           <div class="widget__content">
             <div class="social social--footer"><a href="https://www.facebook.com/saheelha.Arabe" class="social__item"><i class="fa fa-facebook"></i></a><a href="#" class="social__item"><i class="fa fa-twitter"></i></a><a href="#" class="social__item"><i class="fa fa-google-plus"></i></a></div>
@@ -38,7 +37,7 @@
       <!--end of block .footer__col-second-->
       <div class="footer__col footer__col--third">
         <br>
-        <span class="footer__copyright">&copy; 2021 SAHEELHA. All rights reserved</span>
+        <span class="footer__copyright">&copy; 2021 SAHEELHA. {{ 'footer.dest' | translate }}</span>
       </div>
       <!-- end of block .footer__col-third-->
       <div class="clearfix"></div>
