--- a/src/app/liste-boutique/liste-boutique.component.html
+++ b/src/app/liste-boutique/liste-boutique.component.html
@@ -48,16 +48,16 @@
                   <!-- end of block .properties__thumb-->
                   <div class="properties__details">
                     <div class="properties__info"><a href="property_details.html" class="properties__address">
-                      <span class="properties__address-street">Nom :{{boutiques.nom}}</span>
-                      <span class="properties__address-city">Domaine :{{boutiques.domaine}}</span>
-                      <span class="properties__address-city">Adresse :{{boutiques.adresse}}</span>
-                      <span class="properties__address-city">Mail :{{boutiques.mailprofessionnelle}}</span>
+                      <span class="properties__address-street">{{ 'listeboutique.nom' | translate }} :{{boutiques.nom}}</span>
+                      <span class="properties__address-city">{{ 'listeboutique.domaine' | translate }} :{{boutiques.domaine}}</span>
+                      <span class="properties__address-city">{{ 'listeboutique.adresse' | translate }} :{{boutiques.adresse}}</span>
+                      <span class="properties__address-city">{{ 'listeboutique.mail' | translate }} :{{boutiques.mailprofessionnelle}}</span>
 
                     </a>
                       <div class="properties__offer">
                         <br>
                         <div class="properties__offer-column">
-                          <span  class="properties__more" (click)="afficherboutique(boutiques.id)">Afficher Profil</span>
+                          <span  class="properties__more" (click)="afficherboutique(boutiques.id)">{{ 'listeboutique.afficher' | translate }}</span>
 
                         </div>
                       </div>
