:tada: récuperer les commandes pour chaque produit par le fournisseur

--- a/src/app/commande/commande.component.html
+++ b/src/app/commande/commande.component.html
@@ -7,16 +7,16 @@
           <table class="js-properties-table datatable__table">
             <thead>
             <tr>
-              <th class="datatable__head-1">Photo de produit</th>
-              <th class="datatable__head-2">Nom de produit</th>
-              <th class="datatable__head-3 datatable__head-sort">Catégorie</th>
-              <th class="datatable__head-4 datatable__head-sort">Status</th>
-              <th class="datatable__head-5 datatable__head-sort">Date limite de consommation</th>
-              <th class="datatable__head-6 datatable__head-sort">Quantité</th>
-              <th class="datatable__head-7 datatable__head-sort">Prix du produit</th>
-              <th class="datatable__head-8 datatable__head-sort">Prix totale</th>
-              <th class="datatable__head-9 datatable__head-sort">Date du commande</th>
-              <th class="datatable__head-10">Coupon de commande</th>
+              <th class="datatable__head-1">{{ 'commande.photo' | translate }}</th>
+              <th class="datatable__head-2">{{ 'commande.nom' | translate }}</th>
+              <th class="datatable__head-3 datatable__head-sort">{{ 'commande.categorie' | translate }}</th>
+              <th class="datatable__head-4 datatable__head-sort">{{ 'commande.status' | translate }}</th>
+              <th class="datatable__head-5 datatable__head-sort">{{ 'commande.dlc' | translate }}</th>
+              <th class="datatable__head-6 datatable__head-sort">{{ 'commande.quantite' | translate }}</th>
+              <th class="datatable__head-7 datatable__head-sort">{{ 'commande.prix' | translate }}</th>
+              <th class="datatable__head-8 datatable__head-sort">{{ 'commande.prixt' | translate }}</th>
+              <th class="datatable__head-9 datatable__head-sort">{{ 'commande.dc' | translate }}</th>
+              <th class="datatable__head-10">{{ 'commande.coupon' | translate }}</th>
               <th class="datatable__head-11"></th>
             </tr>
             </thead>
