--- a/src/app/details-produit/details-produit.component.html
+++ b/src/app/details-produit/details-produit.component.html
@@ -110,7 +110,11 @@ becomes
 
                         <div class="champ centrage" *ngIf="status"> <a  class="properties__more" type="submit" (click)="supprimerProduit()">Supprimer</a>
                         </div>
+
                         <div class="droite" *ngIf="status">  <a  class="properties__more" type="submit" (click)="modifier(boutique.boutique.id,boutique.id)">Modifer</a>
+                        </div>
+                        <br>
+                        <div class="champ centrage" *ngIf="status"> <a  class="properties__more" type="submit" (click)="supprimerProduit()">Commandes</a>
                         </div>
                         <br>
                         <br>
