traduction + changement de logo

--- a/src/app/details-produit/details-produit.component.html
+++ b/src/app/details-produit/details-produit.component.html
@@ -114,7 +114,7 @@ becomes
                         <div class="droite" *ngIf="status">  <a  class="properties__more" type="submit" (click)="modifier(boutique.boutique.id,boutique.id)">Modifer</a>
                         </div>
                         <br>
-                        <div class="champ centrage" *ngIf="status"> <a  class="properties__more" type="submit" (click)="supprimerProduit()">Commandes</a>
+                        <div class="champ centrage" *ngIf="status"> <a  class="properties__more" type="submit" (click)="commandes(boutique.boutique.id,boutique.id)">Commandes</a>
                         </div>
                         <br>
                         <br>
