--- a/src/app/utilisateur/boutique-user/boutique-user.component.html
+++ b/src/app/utilisateur/boutique-user/boutique-user.component.html
@@ -34,16 +34,16 @@
                 <!-- end of block .properties__thumb-->
                 <div class="properties__details">
                   <div class="properties__info"><a href="property_details.html" class="properties__address">
-                    <span class="properties__address-street">Nom :{{boutiques.nom}}</span>
-                    <span class="properties__address-city">Domaine :{{boutiques.domaine}}</span>
-                    <span class="properties__address-city">Adresse :{{boutiques.adresse}}</span>
-                    <span class="properties__address-city">Mail :{{boutiques.mailprofessionnelle}}</span>
+                    <span class="properties__address-street">{{ 'listeboutique.nom' | translate }} :{{boutiques.nom}}</span>
+                    <span class="properties__address-city">{{ 'listeboutique.domaine' | translate }} :{{boutiques.domaine}}</span>
+                    <span class="properties__address-city">{{ 'listeboutique.adresse' | translate }} :{{boutiques.adresse}}</span>
+                    <span class="properties__address-city">{{ 'listeboutique.mail' | translate }} :{{boutiques.mailprofessionnelle}}</span>
 
                   </a>
                     <div class="properties__offer">
                       <br>
                       <div class="properties__offer-column">
-                        <span  class="properties__more" (click)="afficherboutique(boutiques.id)">Afficher Profil</span>
+                        <span  class="properties__more" (click)="afficherboutique(boutiques.id)">{{ 'listeboutique.afficher' | translate }}</span>
 
                       </div>
                     </div>
@@ -90,8 +90,8 @@
                   <nav class="worker__nav">
                     <ul>
 
-                      <li><a (click)="gotoprofil()" >Profil</a></li>
-                      <li><a  >Vos Boutiques</a></li>
+                      <li><a (click)="gotoprofil()" >{{ 'user.profil' | translate }}</a></li>
+                      <li><a  >{{ 'user.boutique' | translate }}</a></li>
                     </ul>
                   </nav>
                   <!-- end of block .worker__nav-->
